2010-06-25: simple-usage-zope-interface.py [deleted]

	* `zope.interface` モジュールを使う。

2010-06-25: loop-test.py [deleted]

	* ループ処理を計測する。

2010-06-19: try-inspect.py

	* `inspect` モジュールを使う。

2010-06-18: newprj-autotools.sh [deleted]

	* autotools でプロジェクトを作成する。

2010-06-17: loop-test.js,loop-test.html,loop-test.css
	* Duff's Device の考えでループ処理を実行する。

2010-06-13: try-doctest.py

	* `doctest` モジュールを使う。

2010-06-12: blogger-feed.js,blogger-feed.html,blogger-feed.css
	* Blogger のフィードを JSONP を使って表示する。

2010-06-10: xml2html.xsl,xml2html.xml,xml2html.css [deleted]

	* XSLT で XML を HTML に整形する。

2010-06-09: slideshow.html [deleted]

	* JSON の画像情報でスライドショーをする。 (requires jQuery)

2010-06-08: slideshow-metainfo-generator.py
	* 画像の情報を JSON 形式で出力する。

2010-06-07: eval-input-text.html

	* textarea に入力したスクリプトを eval する。

2010-06-06: try-canvas.html

	* HTML5 の Canvas 要素を使ってみる。
	* Renamed the file on April 4th, 2020

2010-05-31: simple-usage-function-ptr.cpp
	* 関数ポインタを使ってみる。

2010-05-30: color-console.cpp
	* コンソールに色づけする。

2010-05-25: icalendar2hcalendar.py [deleted]

	* iCalendar を hCalendar に変換してみる。

2010-05-24: simple-usage-reportlab-table.py
	* ReportLab で表を生成する。

2010-05-22: csv2html.py [deleted]

	* CSV から HTML の <ul> と <table> を作る。

2010-05-21: try-sqlite.py

	* SQLite を使ってみる。

2010-05-18: simple-usage-reportlab-template.py,simple-usage-reportlab-template.txt
	* 差し込み印刷のように PDF を生成する。

2010-05-17: extract-events-from-icalendar.py,extract-events-from-icalendar.ics [deleted]

	* iCalendar から指定した期間のイベントを抽出する。

2010-05-10: csv2htmllist.py [deleted]

	* CSV ファイルから Web サイト用のメニューを作る。

2010-05-06: patch-split.sh
	* パッチファイルを分割する。

2010-05-01: gdata-spredsheets-list.py [deleted]

	* Google Spreadsheets のファイル一覧を取得する。

2010-04-29: count-files-per-suffix.py
	* 拡張子ごとのファイル数を集計する。

2010-04-26: yaml2json.py
	* YAML を JSON に変換する。

2010-04-25: remove-empty-dir.py
	* 空のディレクトリ (隠しファイルひとつのものも含む) を削除する。

2010-04-22: build-python-mysqldb.sh [setup]
	* MySQLdb をインストールする。
