@@ -1,4 +1,0 @@
-#wrapper {width:800px; text-align:center; margin:auto;}
-#contents {text-align:left;}
-#contents p {padding-left:20px; border-left:solid 5px #9999FF;}
-
