@@ -5,6 +5,7 @@
   <li><a href="toggle-contents.html">Toggle contents</a></li>
   <li><a href="loop-test.html">Loop test</a></li>
   <li><a href="eval-input-text.html">Eval JavaScript code snippet</a></li>
+  <li><a href="blogger-feed.html">Blogger feed reader</a></li>
   <li><a href="try-canvas.html">Try &lt;canvas&gt; element</a></li>
 </ul>
 {% endblock %}
